--- a/frontend/profil-secretaire.html
+++ b/frontend/profil-secretaire.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Profil Secrétaire - Candidapp</title>
-
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -29,225 +28,151 @@
       }
     }
   </script>
-
   <style>
-    .gradient-bg {
-      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 50%, #a855f7 100%);
-    }
-
-    .sidebar {
-      width: 280px;
-      min-height: 100vh;
-    }
-
-    .menu-item {
-      transition: all 0.2s ease;
-    }
-
-    .menu-item:hover {
-      background-color: rgba(99, 102, 241, 0.1);
-      transform: translateX(4px);
-    }
-
-    .menu-item.active {
-      background-color: rgba(99, 102, 241, 0.15);
-      border-left: 4px solid #4f46e5;
-      font-weight: 600;
-    }
-
-    .stat-card {
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .stat-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    .chip {
-      border: 1px solid #e5e7eb;
-      background: #fff;
-    }
+    .gradient-bg { background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 50%, #a855f7 100%); }
+    .card-hover { transition: transform .3s ease, box-shadow .3s ease; }
+    .card-hover:hover { transform: translateY(-3px); box-shadow: 0 10px 30px rgba(0,0,0,.1); }
+    .chip { border: 1px solid #e5e7eb; background: #fff; }
   </style>
 </head>
 
-<body class="bg-gray-50">
-  <div class="flex">
+<body class="bg-gray-50 min-h-screen">
 
-    <!-- Sidebar -->
-    <aside class="sidebar bg-white shadow-lg fixed left-0 top-0 flex flex-col">
-      <!-- Logo -->
-      <div class="p-6 border-b">
-        <div class="flex items-center space-x-3">
-          <div class="w-12 h-12 gradient-bg rounded-xl flex items-center justify-center">
-            <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+  <!-- Header -->
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between items-center h-16">
+        <!-- Logo -->
+        <a href="/secretaire/dashboard" class="flex items-center space-x-2">
+          <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
+            <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
             </svg>
           </div>
-          <div>
-            <h1 class="text-xl font-bold text-gray-900">Candidapp</h1>
-            <p class="text-xs text-gray-500">Secrétariat</p>
+          <span class="text-xl font-bold text-gray-900">Candidapp</span>
+          <span class="hidden sm:inline-block text-xs bg-primary-100 text-primary-700 px-2 py-0.5 rounded-full font-medium">Secrétariat</span>
+        </a>
+
+        <!-- Navigation Links -->
+        <div class="hidden md:flex items-center space-x-6">
+          <a id="nav-dashboard" href="/secretaire/dashboard" class="text-gray-600 hover:text-primary-600 transition">Tableau de bord</a>
+          <a id="nav-etudiants" href="/secretaire/etudiants" class="text-gray-600 hover:text-primary-600 transition">Gestion étudiants</a>
+          <a id="nav-rc" href="/secretaire/validation-rc" class="text-gray-600 hover:text-primary-600 transition flex items-center space-x-1">
+            <span>Validation RC</span>
+            <span id="menuBadgeRC" class="bg-red-500 text-white text-xs px-2 py-0.5 rounded-full hidden"></span>
+          </a>
+          <a id="nav-profil" href="/secretaire/profil" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Mon profil</a>
+        </div>
+
+        <!-- User Menu -->
+        <div class="flex items-center space-x-4">
+          <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+            <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
+              <span id="userInitial" class="text-white font-semibold text-sm">SC</span>
+            </div>
+            <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
           </div>
+          <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+            </svg>
+            <span class="hidden sm:inline">Déconnexion</span>
+          </button>
         </div>
       </div>
+    </nav>
+  </header>
 
-      <!-- Menu Navigation -->
-      <nav class="flex-1 py-6">
-        <div class="px-4 space-y-2">
-          <a id="nav-dashboard" href="/secretaire/dashboard"
-            class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-            </svg>
-            <span>Tableau de bord</span>
-          </a>
-
-          <a id="nav-etudiants" href="/secretaire/etudiants"
-            class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-            </svg>
-            <span>Gestion étudiants</span>
-          </a>
-
-          <a id="nav-rc" href="/secretaire/validation-rc"
-            class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            <span>Validation RC</span>
-            <span id="menuBadgeRC"
-              class="ml-auto bg-red-500 text-white text-xs px-2 py-1 rounded-full hidden"></span>
-          </a>
-
-          <!-- ✅ Nouveau : Profil -->
-          <a id="nav-profil" href="/secretaire/profil"
-            class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M16 14a4 4 0 10-8 0m8 0v6H8v-6m8 0a4 4 0 00-8 0m8 0H8" />
-            </svg>
-            <span>Mon profil</span>
-          </a>
+  <!-- Page Header -->
+  <section class="gradient-bg text-white py-12">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex items-center justify-between">
+        <div class="flex items-center space-x-4">
+          <div class="w-14 h-14 bg-white/20 backdrop-blur-sm rounded-xl flex items-center justify-center">
+            <span id="avatarInitial" class="text-2xl font-bold text-white">SC</span>
+          </div>
+          <div>
+            <h1 class="text-3xl font-bold">Mon profil</h1>
+            <p class="text-purple-200 mt-1">Informations de votre compte secrétaire</p>
+          </div>
         </div>
-      </nav>
-
-      <!-- Déconnexion -->
-      <div class="p-4 border-t">
-        <button id="logoutBtn"
-          class="w-full flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
+        <button id="btnRefresh"
+          class="hidden md:flex items-center space-x-2 bg-white/20 hover:bg-white/30 backdrop-blur-sm px-5 py-3 rounded-lg font-semibold transition">
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+              d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
           </svg>
-          <span>Déconnexion</span>
+          <span>Actualiser</span>
         </button>
       </div>
-    </aside>
+    </div>
+  </section>
 
-    <!-- Main Content -->
-    <main class="flex-1 ml-[280px]">
+  <!-- Main Content -->
+  <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+    <!-- Alert -->
+    <div id="alert" class="hidden mb-6 px-4 py-3 rounded-lg text-sm border"></div>
 
-      <!-- Header -->
-      <header class="bg-white shadow-sm sticky top-0 z-10">
-        <div class="px-8 py-4 flex items-center justify-between">
-          <div>
-            <h2 class="text-2xl font-bold text-gray-900">Mon profil</h2>
-            <p class="text-sm text-gray-500 mt-1">Informations</p>
+    <!-- Carte profil -->
+    <div class="bg-white rounded-xl shadow-sm p-6">
+      <div class="flex items-start justify-between gap-6 flex-col lg:flex-row">
+        <div class="flex items-center space-x-4">
+          <div class="w-14 h-14 bg-primary-600 rounded-2xl flex items-center justify-center">
+            <span id="userInitialsBig" class="text-white font-bold text-lg">SC</span>
           </div>
+          <div>
+            <h3 id="pNom" class="text-xl font-bold text-gray-900">—</h3>
+            <p id="pEmail" class="text-sm text-gray-500 mt-1">—</p>
 
-          <div class="flex items-center space-x-4">
-            <button id="btnRefresh"
-              class="px-4 py-2 bg-primary-600 hover:bg-primary-700 text-white rounded-lg font-medium transition">
-              Actualiser
-            </button>
-
-            <button class="relative p-2 text-gray-600 hover:bg-gray-100 rounded-lg transition">
-              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-              </svg>
-              <span class="absolute top-1 right-1 w-2 h-2 bg-red-500 rounded-full"></span>
-            </button>
-
-            <div class="flex items-center space-x-2">
-              <div class="w-10 h-10 bg-primary-600 rounded-full flex items-center justify-center">
-                <span id="userInitials" class="text-white font-semibold">SC</span>
-              </div>
+            <div class="flex flex-wrap gap-2 mt-3">
+              <span id="chipRole" class="chip px-3 py-1 rounded-full text-xs text-gray-700">Rôle : —</span>
+              <span id="chipActif" class="chip px-3 py-1 rounded-full text-xs text-gray-700">Actif : —</span>
+              <span id="chipConge" class="chip px-3 py-1 rounded-full text-xs text-gray-700">En congé : —</span>
             </div>
           </div>
         </div>
-      </header>
 
-      <!-- Content -->
-      <div class="p-8">
-        <!-- Alert -->
-        <div id="alert" class="hidden mb-6 px-4 py-3 rounded-lg text-sm border"></div>
-
-        <!-- Carte profil -->
-        <div class="bg-white rounded-xl shadow-sm p-6">
-          <div class="flex items-start justify-between gap-6 flex-col lg:flex-row">
-            <div class="flex items-center space-x-4">
-              <div class="w-14 h-14 bg-primary-600 rounded-2xl flex items-center justify-center">
-                <span id="userInitialsBig" class="text-white font-bold text-lg">SC</span>
-              </div>
-              <div>
-                <h3 id="pNom" class="text-xl font-bold text-gray-900">—</h3>
-                <p id="pEmail" class="text-sm text-gray-500 mt-1">—</p>
-
-                <div class="flex flex-wrap gap-2 mt-3">
-                  <span id="chipRole" class="chip px-3 py-1 rounded-full text-xs text-gray-700">Rôle : —</span>
-                  <span id="chipActif" class="chip px-3 py-1 rounded-full text-xs text-gray-700">Actif : —</span>
-                  <span id="chipConge" class="chip px-3 py-1 rounded-full text-xs text-gray-700">En congé : —</span>
-                </div>
-              </div>
-            </div>
-
-            <div class="w-full lg:w-auto flex gap-2">
-              <a href="/secretaire/dashboard"
-                class="px-4 py-2 rounded-lg border hover:bg-gray-50 text-gray-700 text-center">
-                Retour tableau de bord
-              </a>
-            </div>
-          </div>
-
-          <div class="mt-6 border-t border-gray-200 pt-6">
-            <h4 class="text-lg font-semibold text-gray-900 mb-4">Détails du compte</h4>
-
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-              <div class="bg-gray-50 rounded-xl p-4">
-                <p class="text-xs text-gray-500">ID Utilisateur</p>
-                <p id="pUserId" class="text-lg font-semibold text-gray-900">—</p>
-              </div>
-
-              <div class="bg-gray-50 rounded-xl p-4">
-                <p class="text-xs text-gray-500">ID Secrétaire</p>
-                <p id="pSecretaireId" class="text-lg font-semibold text-gray-900">—</p>
-              </div>
-
-              <div class="bg-gray-50 rounded-xl p-4">
-                <p class="text-xs text-gray-500">Compte créé le</p>
-                <p id="pCreatedAt" class="text-lg font-semibold text-gray-900">—</p>
-              </div>
-
-              <div class="bg-gray-50 rounded-xl p-4">
-                <p class="text-xs text-gray-500">Statut</p>
-                <p id="pStatut" class="text-lg font-semibold text-gray-900">—</p>
-              </div>
-            </div>
-
-            <div class="mt-5 text-sm text-gray-500">
-              🔒 Ces informations sont en lecture seule. Pour toute correction, contactez l’administration.
-            </div>
-          </div>
+        <div class="w-full lg:w-auto flex gap-2">
+          <a href="/secretaire/dashboard"
+            class="px-4 py-2 rounded-lg border hover:bg-gray-50 text-gray-700 text-center">
+            Retour tableau de bord
+          </a>
         </div>
       </div>
-    </main>
-  </div>
+
+      <div class="mt-6 border-t border-gray-200 pt-6">
+        <h4 class="text-lg font-semibold text-gray-900 mb-4">Détails du compte</h4>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <div class="bg-gray-50 rounded-xl p-4">
+            <p class="text-xs text-gray-500">ID Utilisateur</p>
+            <p id="pUserId" class="text-lg font-semibold text-gray-900">—</p>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4">
+            <p class="text-xs text-gray-500">ID Secrétaire</p>
+            <p id="pSecretaireId" class="text-lg font-semibold text-gray-900">—</p>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4">
+            <p class="text-xs text-gray-500">Compte créé le</p>
+            <p id="pCreatedAt" class="text-lg font-semibold text-gray-900">—</p>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4">
+            <p class="text-xs text-gray-500">Statut</p>
+            <p id="pStatut" class="text-lg font-semibold text-gray-900">—</p>
+          </div>
+        </div>
+
+        <div class="mt-5 text-sm text-gray-500">
+          🔒 Ces informations sont en lecture seule. Pour toute correction, contactez l'administration.
+        </div>
+      </div>
+    </div>
+  </main>
 
   <script>
     // ==================== SESSION ====================
@@ -261,6 +186,19 @@
     if (!user || !user.id) window.location.href = "/login.html";
     const userId = user.id;
 
+    // ==================== UI INIT ====================
+    function initUserUI() {
+      const email = user?.email || '';
+      const nom = user?.nom || '';
+      const initial = (nom[0] || email[0] || 'S').toUpperCase();
+      const initials = getInitialsFromNameOrEmail(user);
+
+      document.getElementById('userInitial').textContent = initial;
+      document.getElementById('userEmailBadge').textContent = email;
+      document.getElementById('avatarInitial').textContent = initials;
+      document.getElementById('userInitialsBig').textContent = initials;
+    }
+
     // Initials (2 lettres max)
     function getInitialsFromNameOrEmail(u) {
       const name = (u?.nom || "").trim();
@@ -273,10 +211,6 @@
       const email = (u?.email || "").trim();
       return (email[0] || "S").toUpperCase() + (email[1] || "C").toUpperCase();
     }
-
-    const initials = getInitialsFromNameOrEmail(user);
-    document.getElementById("userInitials").textContent = initials;
-    document.getElementById("userInitialsBig").textContent = initials;
 
     // ==================== UI HELPERS ====================
     function showAlert(type, msg) {
@@ -309,18 +243,27 @@
 
     // ==================== MENU ACTIVE ====================
     function setActiveMenu() {
-      const dashboard = document.getElementById("nav-dashboard");
-      const etudiants = document.getElementById("nav-etudiants");
-      const rc = document.getElementById("nav-rc");
-      const profil = document.getElementById("nav-profil");
-
-      [dashboard, etudiants, rc, profil].forEach(el => el?.classList.remove("active"));
-
+      const navItems = ['nav-dashboard', 'nav-etudiants', 'nav-rc', 'nav-profil'];
       const path = window.location.pathname;
-      if (path.includes("/secretaire/profil")) profil?.classList.add("active");
-      else if (path.includes("/secretaire/etudiants")) etudiants?.classList.add("active");
-      else if (path.includes("/secretaire/validation-rc")) rc?.classList.add("active");
-      else dashboard?.classList.add("active");
+
+      navItems.forEach(id => {
+        const el = document.getElementById(id);
+        if (!el) return;
+
+        el.classList.remove('text-primary-600', 'font-semibold', 'border-b-2', 'border-primary-600', 'pb-1');
+        el.classList.add('text-gray-600');
+      });
+
+      let activeId = 'nav-dashboard';
+      if (path.includes('/secretaire/profil')) activeId = 'nav-profil';
+      else if (path.includes('/secretaire/etudiants')) activeId = 'nav-etudiants';
+      else if (path.includes('/secretaire/validation-rc')) activeId = 'nav-rc';
+
+      const activeEl = document.getElementById(activeId);
+      if (activeEl) {
+        activeEl.classList.remove('text-gray-600');
+        activeEl.classList.add('text-primary-600', 'font-semibold', 'border-b-2', 'border-primary-600', 'pb-1');
+      }
     }
 
     // ==================== LOAD PROFIL ====================
@@ -365,6 +308,7 @@
 
     // ==================== EVENTS ====================
     window.addEventListener("DOMContentLoaded", () => {
+      initUserUI();
       setActiveMenu();
       loadProfil();
 
